# openvideokit

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: ai.md  chat.md  compositions.md  deployment.md  development.md  mermaid-check.sh  templates.md
docs/legacy/: api.md  architecture.md
docs/rfc/: 0001-cross-platform-desktop-studio.md  0002-ai-subsystem.md  0002-asset-intelligence.md  0003-asset-intelligence.md  0003-credits-and-billing.md  0004-credits-and-billing.md
docs/web/: ai-integration.md  api.md  architecture.md  concurrency.md  editor-components.md  export.md  ssr.md  state.md  templates.md
githooks/: pre-commit
legacy/: README.md
legacy/openvideokit-mvp/: __main__.py  app.py  config.py  test-e2e.py
ovk-web/: .cta.json  .env.example  AGENTS.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
ovk-web/scripts/: check-caption-token.sh
ovk-web/src/: main.tsx  routeTree.gen.ts  styles.css
scripts/: dev.sh  generate_voiceover.py  start-https.sh  test-e2e.py
src/openvideokit/: __init__.py  __main__.py  app.py  captions.py  chats.py  cli.py  composition.py  config.py  events.py  rendering.py  routes.py  seed.py  stamp.py  store.py  templating.py  voiceover.py  watcher.py
templates/agent-chat/: index.html  template.json
templates/capability-reel/: index.html  template.json
templates/cli-tutorial/: index.html  template.json
templates/custom-video/: index.html  (+1 more)
tests/: test_captions.py  test_chats.py  test_composition.py  test_events.py  test_export_routes.py  test_rendering.py  test_stamp.py  test_store.py
(+189 files in other folders)
