[project]
name = "openvideokit"
version = "0.1.0"
description = "Deterministic video templating pipeline — form-driven, minimal LLM, HyperFrames underneath."
requires-python = ">=3.13"
dependencies = [
    "edge-tts>=6.1.0",
    "fastapi>=0.138.0",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.32",
    "typer>=0.15.0",
    "uvicorn[standard]>=0.49.0",
    "watchdog>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "requests>=2.32",
    "ruff>=0.6",
]

[project.scripts]
openvideokit = "openvideokit.__main__:main"
ovk = "openvideokit.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openvideokit"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "scripts"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle / pyflakes
    "I",             # isort
    "B",             # bugbear
    "UP",            # pyupgrade
    "SIM",           # simplify
]
ignore = ["E501"]   # line length handled by formatter

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["B008"]  # requests.Session() etc.

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
]
